TurtleLab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\+libs\mediaComp.jar;\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab
-d
\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\turtle_lab.java
<---- end of javadoc command ---->
Loading source file \\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\turtle_lab.java...
\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\turtle_lab.java:19: error: not a statement
        turtle.turn
              ^
\\NNHSSRV2.hs.sd203.org\ATApicella$\GitHub\unit1Objects\TurtleLab\turtle_lab.java:19: error: ';' expected
        turtle.turn
                   ^
2 errors
